--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
 }
-
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,6 +35,18 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.container{
+  margin: 50px auto;
+  padding:10px 400px;
+  
 }
 
-
+.body{
+  padding:10px 40px;
+  border:solid;
+  height:600px;
+  border-color: black;
+  background-color: #61dafb;
+}
