--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,14 @@
   }
 } */
 
+#wrap{
+  min-width: 1230px;
+  width:100%;
+  height:100%;
+}
 .container{
-  margin: 50px auto;
-  padding:10px 400px;
-  
+  margin: 0 auto;
+  width: 1190px;
 }
 
 .body{
