--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,60 @@
 .App {
   text-align: center;
 }
-/* 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 
 #wrap{
   min-width: 1230px;
   width:100%;
   height:100%;
 }
+
+.head{
+  display:flex;
+  justify-content: space-between;
+  width: 1190px;
+  height:63px;
+  margin: 0 auto;
+  align-items: center;
+  
+}
+
+.bar{
+  display:flex;
+  justify-content: space-between;
+  width: 1190px;
+  height:55px;
+  margin: 0 auto;
+  align-items: center;
+}
+
+ul{
+  list-style: none;
+}
+li{
+  margin-right:10px;
+}
+
+.siteList{
+  display: flex;
+  height:100%;
+  position: relative;
+  padding: 0 5px;
+  margin: 0;
+}
+
+
+
+
 .container{
   margin: 0 auto;
   width: 1190px;
+}
+
+hr{
+  background-color:lightgrey;
+  margin:0;
+  border:0;
+  height:1px;
 }
 
 .body{
@@ -54,3 +64,18 @@
   border-color: black;
   background-color: #61dafb;
 }
+
+.navBar{
+  display:block;
+  text-align: center;
+  line-height: 55px;
+  position:relative;
+  font-size:16px;
+  font-weight: 500;
+  color:black;
+  text-decoration-line: none;
+}
+/* 
+a:visited{
+  text-decoration: none;
+} */
