--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,8 @@ hr{
 .body{
   padding:10px 40px;
   border:solid;
+  
+  font-size: 30px;
   height:600px;
   border-color: black;
   background-color: #61dafb;
@@ -75,7 +77,18 @@ hr{
   color:black;
   text-decoration-line: none;
 }
-/* 
-a:visited{
-  text-decoration: none;
-} */
+
+#selectionList{
+  display:flex;
+  position:relative;
+  margin-top: 3px;
+}
+button{
+  margin-right:10px;
+  width:80px;
+  height:50px;
+  font-size: 20px;
+}
+.input{
+  display:flex;
+}
